# Gym_Dsktoop_application

./: .env  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  gym_management.db  gym_managemne.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  db_check.rs  lib.rs  main.rs
src/components/header/: MainLayout.jsx  index.jsx
src/components/inscription/: inscit.jsx
src/components/list/: list.jsx
src/components/notification/: notification.jsx
src/components/sportPayre/: sportPay.jsx
src/components/sport_list/: sport_list.jsx
src/page/Dashbord/: index.jsx
