[package]
name = "gym_app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gym_app_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-app = "2.0.0-alpha"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] } # For serializing and deserializing data
serde_json = "1" # For handling JSON data
tauri-plugin-sql = { version = "2", features = ["mysql"] }
bitvec = "1.0.1"
funty ="2.0.0" 
rusqlite = { version ="0.32.1", features = ["bundled"] }

